--- a/Documentation/Leitrechner.adoc
+++ b/Documentation/Leitrechner.adoc
@@ -2,55 +2,57 @@
 
 == Teilprprojekt Leitrechner, Ralf Pauli, Michael Krebs  
 
+
 === Allgemeines
 Damit die Fertigunsstraße die Aufträge aus der Datenbank bearbeiten kann, müssen diese erst dorthin gelangen. Wir haben uns entschieden diese Aufgabe zu übernehemen und durch Sockets zu realisieren.
 
-=== Umsetzung
-
-==== Zweck des Leitrechners
-image::uebersicht.png[alt=Überischt, width=80%, float="right"] 
-Der Webservice speichert die Aufträge die vom *JavaFX Client*, der *Android App* und der *Webpage* gesendet werden und speichert diese in der Datenbank. +
-Wir holen die noch offenen Aufträge aus der Datenbank und senden diese dann an die Fertigungsstraße, sobalt der Auftrag dort verarbeitet wurde, kriegen wir eine Rückmeldung und ändern den Status des Auftrags.
-
-==== Datenbanksystem
+==== Schnittstellen
+- Datenbanksystem:
++
 Wir verwenden eine MySql Datenbank die auf Devel1 erreichbar ist.
+Es werden Aufträge, Produkte, Adressen und User gespeichert, allerdings benötigen wir nur die Aufträge und Produkte.
 
-=== Database Manager
-Wir benutzen die https://docs.oracle.com/javase/8/docs/api/java/sql/package-summary.html[Java Sql Libary] für den Zugriff auf die MySql Datenank. 
-In der Database Mananger Klasse haben wir ein getNewAuftraege Methode, welche alle noch offenen Aufträge ab einem übergebenen Datum aus der Datenbank holt.
+- Fertigungsstraße
++
+Wir verbinden uns über eine Socket Verbindung zu der Fertigunsstraße. Wir machen dies um Daten aus der Datenbank zu holen und diese an die Fertigungsstraße weiterzuleiten.
 
-==== Probleme
-* Wir haben versucht ein Sql Statement zu schreiben welches die Parameter weglässt zu denen kein wert zugordet ist, allerdings hat dies nach langen testen und probieren nicht funktionet. Deswegen haben wir uns dazu entschieden ein Sql Statemnt zur Laufzeit zusammenzubauen.
 
-=== Socket Server
+==== Ablauf 
 
-==== Zweck des Socket Servers
-Der Socket Server baut mit hilfe https://docs.oracle.com/javase/7/docs/api/java/net/Socket.html[Java Socket Libary] eine Verbindng mit dem Client Socket auf, um Auftragdaten wie z. B. neue Aufträge, auszutauschen.
-
-==== Umsetzung 
 . Es wird ein Verbindung zum Socket Client aufgebaut. 
 +
 [source, java]
 ----
-    public static void openConnection() {
-        try (ServerSocket sv = new ServerSocket(43000)) {
-            Socket connection = sv.accept();
-            ...
-    }
+public static void openConnection() {
+    try (ServerSocket sv = new ServerSocket(43000)) {
+        Socket connection = sv.accept();
+        ...
+}
 ----
 +
-. Der Server wartet auf ein "begin" vom Client und sendet dann den nächsten offenen Auftrag (siehe Database Manager) über die Konsole an den Client.
+. Der Server wartet auf ein "begin" vom Client und sendet dann den nächsten offenen Auftrag (siehe <<Database Manager>>) über die Konsole an den Client.
 
-. Falls der Client etwas anderes sendet als bereit wird eine entsprächende Rückmeldung gegeben bzw. wenn "exit" gesendet wird, wenden der Server und der Client beendet.
+. Nachdem der Auftrag fertig produziert wurde, sendet der Cient die Auftragsnummer des produzierten Produkts und einen Status, z. B. "bereit" um den nächsten zu bekommen oder "exit" um den Client und Server zu beenden, zurück.
 
-==== Probleme
-* Socket Server
+. Ab dem zweiten "bereit" (erstes "bereit" ist um den Vorgang zu starten), dass der Server bekommt wird der Status des fertigen Produkts in der Datenbank auf "fertig" gesetzt.
 
 
-=== Socket Client
+==== Zweck des Leitrechners
+.Übersicht Carlos
+image::uebersicht.png[alt=Überischt, width=80%, float="right"] 
+Der Webservice speichert die Aufträge die vom *JavaFX Client*, der *Android App* und der *Webpage* gesendet werden und speichert diese in der Datenbank. +
+Wir holen die noch offenen Aufträge aus der Datenbank und senden diese dann an die Fertigungsstraße. Sobald der Auftrag dort verarbeitet wurde, kriegen wir eine Rückmeldung und ändern den Status des Auftrags in der Datenbank.
 
-==== Zweck des Socket Servers
-Der Socket Client baut eine Verbinung mit dem Socket Server auf, bekommt dadurch neue Aufträge, und sendet an die Fertigungsstraße weiterzuleiten.
 
-==== Probleme
-* Json convertiertung
+
+=== Database Manager
+Wir benutzen die https://docs.oracle.com/javase/8/docs/api/java/sql/package-summary.html[Java Sql Libary] für den Zugriff auf die MySql Datenank. 
+In der Database Mananger Klasse haben wir ein *getNewAuftraege* Methode, welche alle noch offenen Aufträge ab einem übergebenen Datum aus der Datenbank holt.
+
+Damit der Status des Auftrag nach der Produktion geändert werden kann haben wir die *setStatus* Methode erstellt, welche ein Update durchführt um den Status an der entsprechenden Id ändert.
+
+
+=== Probleme
+* Wir haben versucht ein Sql Statement zu schreiben welches die Parameter weglässt zu denen kein wert zugordet ist, allerdings hat dies nach langen testen und probieren nicht funktionet. Deswegen haben wir uns dazu entschieden ein Sql Statemnt zur Laufzeit zusammenzubauen.
+
+=== Ausblick auf mögliche Erweiterungen 
