--- a/Documentation/Leitrechner.adoc
+++ b/Documentation/Leitrechner.adoc
@@ -9,13 +9,15 @@ Damit die Fertigunsstraße die Aufträge aus der Datenbank bearbeiten kann, müs
 ==== Schnittstellen
 - Datenbanksystem:
 +
-Wir verwenden eine MySql Datenbank die auf http://devel1/phpmyadmin/[Devel1] erreichbar ist.
+Wir verwenden eine https://www.mysql.com/de/[MySql] Datenbank die auf http://devel1/phpmyadmin/[Devel1] erreichbar ist.
 Es werden Aufträge, Produkte, Adressen und User gespeichert, allerdings benötigen wir nur die Aufträge und Produkte.
 
 - Fertigungsstraße
 +
 Wir verbinden uns über eine Socket Verbindung zu der Fertigunsstraße. Wir machen dies um Daten aus der Datenbank zu holen und diese an die Fertigungsstraße weiterzuleiten.
 
+====  Programmiersprache/Entwicklungsumgebung
+Wir nutzen https://www.java.com/de/[Java] mit der Verison 1.8 und programmieren in https://www.jetbrains.com/de-de/idea/[IntelliJ], der Leistungsfähige und ergonomische IDE für JVM von JetBrains
 
 ==== Ablauf 
 
@@ -32,16 +34,60 @@ public static void openConnection() {
 +
 . Der Server wartet auf ein "begin" vom Client und sendet dann den nächsten offenen Auftrag (siehe <<Database Manager>>) über die Konsole an den Client.
 
-. Nachdem der Auftrag fertig produziert wurde, sendet der Cient die Auftragsnummer des produzierten Produkts und einen Status, z. B. "bereit" um den nächsten zu bekommen oder "exit" um den Client und Server zu beenden, zurück.
+. Nachdem der Auftrag fertig produziert wurde, sendet der Cient die Auftragsnummer des produzierten Produkts und einen Status, z. B. "bereit" um den nächsten Auftrag zu bekommen oder "exit" um den Client und Server zu beenden, zurück.
++
+[source, java]
+----
+while (!stop) {
+    // Wenn keine offenen Aufträge in der Liste sind holl alle neuen offenen aus der DB
+    if (orders.size() == 0) {
+        orders = DatabaseManager.getNewAuftrage(lastRead);
+    }
+    // Lese Nachricht vom Client
+    answer = input.readLine();
+    System.out.println("Input: " + answer);
+    // Wenn jemand manuell "" sendet oder einfach Enter drückt
+    if (answer == null) {
+        output.println("Bitte Status senden!");
+    // Wenn der Client exit sendet wird unser Programm auch "beendet" 
+    // bzw. er geht aus der while Schleife raus, aber danach passiert nichts mehr
+    } else if (answer.contains("exit")) {
+        stop = true;
 
-. Ab dem zweiten "bereit" (erstes "bereit" ist um den Vorgang zu starten), dass der Server bekommt wird der Status des fertigen Produkts in der Datenbank auf "fertig" gesetzt.
+    // Dies sollte nur beim ersten mal senden vorkommen
+    } else if(answer.equals("bereit")){
+        orderMsg = getMessage();
+        System.out.println("Output: " + orderMsg);
+        output.println(orderMsg);
+    // Der Status wird in der DB aktuallisiert,
+    // der fertige Auftrag aus der Liste entfernt,
+    // der neue Auftrag wird aus der Liste geholt und an den Client gesendet.
+    } else if (answer.contains("bereit")) {
+        DatabaseManager.setStatus(answer.split(";")[0], "fertig");
+        orders.remove(0);
+        orderMsg = getMessage();
+        System.out.println("Output: " + orderMsg);
+        output.println(orderMsg);
+
+    } else if (answer.contains("lauft")){
+        System.out.println("läuft");
+    // Wenn nichts zutrifft, mach weiter
+    } else {
+        continue;
+    }
+    oldOrder = orders.get(0);
+}
+----
+
+
+. Wenn ein "bereit" gesendet wird, wird in der Datenbank der Status des Auftrag mit der gesendeten Id auf "fertig" gesetz und der nächste Auftrag an den Client geschickt.
 
 
 ==== Zweck des Leitrechners
 .Übersicht Carlos
 image::uebersicht.png[alt=Überischt, width=80%, float="right"] 
 Der Webservice speichert die Aufträge die vom *JavaFX Client*, der *Android App* und der *Webpage* gesendet werden und speichert diese in der Datenbank. +
-Wir holen die noch offenen Aufträge aus der Datenbank und senden diese dann an die Fertigungsstraße. Sobald der Auftrag dort verarbeitet wurde, kriegen wir eine Rückmeldung und ändern den Status des Auftrags in der Datenbank.
+Wir holen alle noch offenen Aufträge aus der Datenbank und senden diese dann an die Fertigungsstraße. Sobald der Auftrag dort verarbeitet wurde, kriegen wir eine Rückmeldung und ändern den Status des Auftrags in der Datenbank.
 
 
 
@@ -53,6 +99,8 @@ Damit der Status des Auftrag nach der Produktion geändert werden kann haben wir
 
 
 === Probleme
-* Wir haben versucht ein Sql Statement zu schreiben welches die Parameter weglässt zu denen kein wert zugordet ist, allerdings hat dies nach langen testen und probieren nicht funktionet. Deswegen haben wir uns dazu entschieden ein Sql Statemnt zur Laufzeit zusammenzubauen.
+* Beim Start des Programms, wird um die Kommunikation zu starten ein "beginn" vom Client zum Server gesendet. Allerdings ist hinter dem "beginn" kein Auftrag hinterlegt, deshalb soll auch nichts in der Datenbank aktualisiert werden und es soll auch kein Element aus der Auftrag Liste entfernt werden.
+
+* Wir haben versucht ein Sql Statement zu schreiben welches die Parameter ignoriert zu denen kein wert zugordet ist, allerdings hat dies nach langen testen und probieren nicht funktionet. Deswegen haben wir uns dazu entschieden ein Sql Statemnt abhängig von übergebenen Parametern zusammenzubauen.
 
 === Ausblick auf mögliche Erweiterungen 
