--- a/Documentation/Leitrechner.adoc
+++ b/Documentation/Leitrechner.adoc
@@ -1,31 +1,31 @@
 :numbered:
 
-== Teilprprojekt Leitrechner
+== Teilprojekt Leitrechner
 
 
-=== Allgemeines
-Damit die Fertigunsstraße die Aufträge aus der Datenbank bearbeiten kann, müssen diese erst dorthin gelangen. Wir haben uns entschieden diese Aufgabe zu übernehemen und durch Sockets zu realisieren.
+=== Zweck des Teilprojekts
+Damit die *Fertigungsstraße* die Aufträge aus der *Datenbank* bearbeiten kann, müssen diese erst dorthin gelangen. Man hat sich dazu entschieden, diese Aufgabe zu übernehmen und durch *Sockets* zu realisieren.
 
-==== Schnittstellen
+===  Programmiersprache/Entwicklungsumgebung
+Es wird die Programmiersprache https://www.java.com/de/[Java] in der Version 1.8 und die Java-IDE https://www.jetbrains.com/de-de/idea/[IntelliJ] von https://www.jetbrains.com/de-de/[JetBrains] verwendet, um das Projekt zu verwirklichen.
+
+=== Verwendete Bibliotheken/Frameworks
+Es wird die Libraries https://docs.oracle.com/javase/7/docs/api/java/net/Socket.html[java.net.Socket] und https://docs.oracle.com/javase/7/docs/api/java/net/ServerSocket.html[java.net.ServerSocket] für die Kommunikation zwischen Client und Server verwendet.  
+
+=== Verwendete Schnittstellen im Projekt
 - Datenbanksystem:
 +
-Wir verwenden eine https://www.mysql.com/de/[MySql] Datenbank die auf http://devel1/phpmyadmin/[Devel1] erreichbar ist.
-Es werden Aufträge, Produkte, Adressen und User gespeichert, allerdings benötigen wir nur die Aufträge und Produkte.
+Man verwendet eine https://www.mysql.com/de/[MySQL] Datenbank, die auf http://devel1/phpmyadmin/[Devel1] erreichbar ist.
+Es werden Aufträge, Produkte, Adressen und User gespeichert, allerdings benötigt man nur die Aufträge und Produkte.
 
 - Fertigungsstraße
 +
-Wir verbinden uns über eine Socket Verbindung zu der Fertigunsstraße. Wir machen dies um Daten aus der Datenbank zu holen und diese an die Fertigungsstraße weiterzuleiten.
-
-==== Bibliotheken
-Es wird die Libraries https://docs.oracle.com/javase/7/docs/api/java/net/Socket.html[java.net.Socket] und https://docs.oracle.com/javase/7/docs/api/java/net/ServerSocket.html[java.net.ServerSocket] für die Kommunikation zwischen Client und Server verwendet.  
+Man verbindet sich über eine Socket Verbindung zu der Fertigungsstraße. Man macht dies, um Daten aus der Datenbank zu holen und diese an die Fertigungsstraße weiterzuleiten.
 
 
-====  Programmiersprache/Entwicklungsumgebung
-Es wird die Programmiersprache https://www.java.com/de/[Java] in der Version 1.8 und die Java-IDE https://www.jetbrains.com/de-de/idea/[IntelliJ] von https://www.jetbrains.com/de-de/[JetBrains] benutzt, um das Projekt zu verwirklichen.
+=== Ablauf 
 
-==== Ablauf 
-
-. Es wird ein Verbindung zum Socket Client aufgebaut. 
+. Es wird eine Verbindung zum Socket Client aufgebaut. 
 +
 [source, java]
 ----
@@ -36,9 +36,9 @@ public static void openConnection() {
 }
 ----
 +
-. Der Server wartet auf ein "begin" vom Client und sendet dann den nächsten offenen Auftrag (siehe <<Database Manager>>) über die Konsole an den Client.
+. Der Server wartet auf ein "begin" vom Client und sendet dann den nächsten offenen Auftrag (siehe <<Database Manager>>) über die Socket Verbindung (*output.println()*) an den Client.
 
-. Nachdem der Auftrag fertig produziert wurde, sendet der Cient die Auftragsnummer des produzierten Produkts und einen Status, z. B. "bereit" um den nächsten Auftrag zu bekommen oder "exit" um den Client und Server zu beenden, zurück.
+. Nachdem der Auftrag fertig produziert wurde, sendet der Client die Auftragsnummer des produzierten Produkts und einen Status, z. B. "bereit", um den nächsten Auftrag zu bekommen oder "exit", um den Client und Server zu beenden, zurück.
 +
 [source, java]
 ----
@@ -84,27 +84,49 @@ while (!stop) {
 ----
 
 
-. Wenn ein "bereit" gesendet wird, wird in der Datenbank der Status des Auftrag mit der gesendeten Id auf "fertig" gesetz und der nächste Auftrag an den Client geschickt.
+. Wenn ein "bereit" gesendet wird, wird in der Datenbank der Status des Auftrag mit der gesendeten Id auf "fertig" gesetzt und der nächste Auftrag an den Client geschickt.
 
 
 ==== Zweck des Leitrechners
 .Übersicht Carlos
 image::uebersicht.png[alt=Überischt, width=80%, float="right"] 
-Der Webservice speichert die Aufträge die vom *JavaFX Client*, der *Android App* und der *Webpage* gesendet werden und speichert diese in der Datenbank. +
-Wir holen alle noch offenen Aufträge aus der Datenbank und senden diese dann an die Fertigungsstraße. Sobald der Auftrag dort verarbeitet wurde, kriegen wir eine Rückmeldung und ändern den Status des Auftrags in der Datenbank.
+Der Webservice speichert die Aufträge, die vom *JavaFX Client*, der *Android App* und der *Webpage* gesendet werden und speichert diese in der Datenbank. +
+Man holt alle noch offenen Aufträge aus der Datenbank und sendet diese dann an die Fertigungsstraße. Sobald der Auftrag dort verarbeitet wurde, kriegt man eine Rückmeldung und ändert den Status des Auftrags in der Datenbank.
 
 
 
 === Database Manager
-Wir benutzen die https://docs.oracle.com/javase/8/docs/api/java/sql/package-summary.html[Java Sql Libary] für den Zugriff auf die MySql Datenank. 
-In der Database Mananger Klasse haben wir ein *getNewAuftraege* Methode, welche alle noch offenen Aufträge ab einem übergebenen Datum aus der Datenbank holt.
-
-Damit der Status des Auftrag nach der Produktion geändert werden kann haben wir die *setStatus* Methode erstellt, welche ein Update durchführt um den Status an der entsprechenden Id ändert.
+Man benutzt die https://docs.oracle.com/javase/8/docs/api/java/sql/package-summary.html[Java SQL Libary] für den Zugriff auf die MySql Datenank. 
+Man benutzt die Java SQL Libary für den Zugriff auf die MySQL Datenbank. In der Database Manager Klasse hat man eine getNewAuftraege Methode erstellt, welche alle noch offenen Aufträge ab einem übergebenen Datum aus der Datenbank holt. +
+Damit der Status des Auftrags nach der Produktion geändert werden kann haben wir die setStatus Methode erstellt, welche ein Update durchführt, um den Status an der entsprechenden Id änder
 
 
 === Probleme
-* Beim Start des Programms, wird um die Kommunikation zu starten ein "beginn" vom Client zum Server gesendet. Allerdings ist hinter dem "beginn" kein Auftrag hinterlegt, deshalb soll auch nichts in der Datenbank aktualisiert werden und es soll auch kein Element aus der Auftrag Liste entfernt werden.
+* Beim Start des Programms, wird um die Kommunikation zu starten ein "begin" vom Client zum Server gesendet. Allerdings ist hinter dem "begin" kein Auftrag hinterlegt, deshalb soll auch nichts in der Datenbank aktualisiert werden und es soll auch kein Element aus der Auftrag Liste entfernt werden. +
+Man hatte das Problem das der erste Auftrag schon auf "fertig" gesetzt wurde, bevor er durch die Fertigungsstraße gelaufen ist. +
+Gelöst wurde dies indem wir eienen weiteren if-Fall hinzugefügt haben der schaut ob die Nachricht vom Client nur "begin" enthällt und keine Auftragsnummmer.
++
+[source, java]
+----
+...
+} else if(answer.equals("bereit")){
+    orderMsg = getMessage();
+    System.out.println("Output: " + orderMsg);
+    output.println(orderMsg);
 
-* Wir haben versucht ein Sql Statement zu schreiben welches die Parameter ignoriert zu denen kein wert zugordet ist, allerdings hat dies nach langen testen und probieren nicht funktionet. Deswegen haben wir uns dazu entschieden ein Sql Statemnt abhängig von übergebenen Parametern zusammenzubauen.
+} else if (answer.contains("bereit")) {
+    DatabaseManager.setStatus(answer.split(";")[0], "fertig");
+    orders.remove(0);
+    orderMsg = getMessage();
+    System.out.println("Output: " + orderMsg);
+    output.println(orderMsg);
+} 
+...
+----
 
 === Ausblick auf mögliche Erweiterungen 
+Das Programm könnte bereits im aktuellen Entwicklungsstadium verwendet werden. Würde das Projekt weiter bearbeitet werden gäbe es jedoch noch eine Vielzahl an sinnvollen Erweiterungen, die ich kurz anreißen möchte. 
+
+* *Eine Graphische Anwendung* +
+ Momentan wird die ganze Kommunikation in der Konsole dargestellt, um dies Benutzerfreundlicher zu machen hatte man die Idee eine GUI zur Steurung, Überprüfung und Testung der Daten zu erstellen. +
+ Mögliche Funktionen währen das Starten und Stoppen des Servers und das Anzeigen der Kommunikation mit Zeitstempel in einer Tabelle.
