Repair images in Doku

--- a/Documentation/Leitrechner_Doku.adoc
+++ b/Documentation/Leitrechner_Doku.adoc
@@ -9,7 +9,7 @@
 :toc-title: Inhaltsverzeichnis
 :sectnums:
 :sectnumlevels: 10
-:imagesdir: .\images
+:imagesdir: .\Documentation\images
 :figure-caption: Abbildung
 :table-caption: Tabelle
 :app-name: Leitrechner Dokumentation
